# pdfextract

./: .gitignore  Cargo.toml  README.md  app.rc  build.rs
.cargo/: config.toml
.github/workflows/: release-sign.yml  sign-release-asset.yml
src/: main.rs
